App is done and is now uploaded on heroku

--- a/meanauthapp/auth-app/src/app/components/register/register.component.html
+++ b/meanauthapp/auth-app/src/app/components/register/register.component.html
@@ -60,5 +60,7 @@
     </div>
 
   </div>
-  <button [disabled]="!f.valid" type="submit" class="btn btn-primary">Submit</button>
+
+  <button [disabled]="f.invalid" type="submit" class="btn btn-primary">Submit</button>
+
 </form>
