--- a/meanauthapp/auth-app/src/app/components/login/login.component.html
+++ b/meanauthapp/auth-app/src/app/components/login/login.component.html
@@ -1,3 +1,32 @@
-<p>
-  login works!
-</p>
+<h2 class="display-4">Login</h2>
+<form #f="ngForm" (ngSubmit)="onLoginSubmit(f)">
+
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" [(ngModel)]="username" name="username" id="username" class="form-control" placeholder="Your Username..."
+      #usernameField="ngModel" required>
+
+    <div *ngIf="usernameField.invalid && (usernameField.dirty || usernameField.touched)" class="alert alert-danger">
+      <div *ngIf="usernameField.errors.required">
+        <small>Username is required</small>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" [(ngModel)]="password" name="password" id="password" class="form-control" placeholder="Your Password..."
+      #passwordField="ngModel" required>
+
+    <div *ngIf="passwordField.invalid && (passwordField.dirty || passwordField.touched)" class="alert alert-danger">
+      <div *ngIf="passwordField.errors.required">
+        <small>Password is required</small>
+      </div>
+    </div>
+
+  </div>
+
+  <button [disabled]="f.invalid" type="submit" class="btn btn-primary">Login</button>
+
+</form>
