--- a/meanauthapp/auth-app/src/app/components/navbar/navbar.component.html
+++ b/meanauthapp/auth-app/src/app/components/navbar/navbar.component.html
@@ -14,13 +14,21 @@
       </ul>
 
       <ul class="navbar-nav ml-auto">
-        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
+        <li *ngIf="authService.loggedIn()" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
+          <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+        </li>
+        <li *ngIf="authService.loggedIn()" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
+          <a class="nav-link" routerLink="/profile">Profile</a>
+        </li>
+        <li *ngIf="!authService.loggedIn()" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
-        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
+        <li *ngIf="!authService.loggedIn()" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
           <a class="nav-link" routerLink="/register">Register</a>
         </li>
-        
+        <li *ngIf="authService.loggedIn()" class="nav-item">
+          <a class="nav-link" (click)="onLogoutClick()">Logout</a>
+        </li>
       </ul>
     </div>
   </div>
