--- a/tasksapp/tasks-ui/src/app/components/navbar/navbar.component.html
+++ b/tasksapp/tasks-ui/src/app/components/navbar/navbar.component.html
@@ -34,7 +34,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="logout()" href="#">Logout</a>
+          <a class="nav-link" href="#">Logout</a>
         </li>
       </ul>
     </div>
