--- a/tasksapp/tasks-ui/src/app/components/navbar/navbar.component.html
+++ b/tasksapp/tasks-ui/src/app/components/navbar/navbar.component.html
@@ -9,32 +9,32 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/" href="#">Home</a>
+          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/task/all" href="#">Tasks List</a>
+        <li *ngIf="authService.loggedIn()" class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/task/all" href="#">Tasks List</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/task/add" href="#">Add Task</a>
+        <li *ngIf="authService.loggedIn()" class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/task/add" href="#">Add Task</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login" href="#">Login</a>
+        <li *ngIf="!authService.loggedIn()" class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/login" href="#">Login</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/register" href="#">Register</a>
+        <li *ngIf="!authService.loggedIn()" class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/register" href="#">Register</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+        <li *ngIf="authService.loggedIn()" class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" routerLinkActive="active" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Profile</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" routerLink="profile/view" href="#">View</a>
             <a class="dropdown-item" routerLink="profile/edit" href="#">Edit</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Logout</a>
+        <li *ngIf="authService.loggedIn()" class="nav-item">
+          <a class="nav-link" href="#" (click)="logOut()">Logout</a>
         </li>
       </ul>
     </div>
