Added the daterangepicker plugin

--- a/tasksapp/tasks-ui/src/app/components/tasks/add-task/add-task.component.html
+++ b/tasksapp/tasks-ui/src/app/components/tasks/add-task/add-task.component.html
@@ -1,5 +1,5 @@
 <h2 class="display-3 mb-4">Add a Task</h2>
-<form #taskForm="ngForm" (ngSubmit)="addTask(taskForm)" novalidate>
+<form #taskForm="ngForm" (ngSubmit)="addTask(taskForm)">
 
   <div class="form-group">
     <label for="task">Tasks Name</label>
@@ -17,33 +17,14 @@
   </div>
 
   <div class="form-group">
-    <label for="startDate">Start Date</label>
-    <input [(ngModel)]="task.startDate" type="date" name="startDate" id="startDate" class="form-control" #startDateField [ngClass]="{'is-invalid' : startDateField.invalid && (startDateField.dirty || startDateField.touched)}" required>
-
-    <div *ngIf="startDateField.invalid && (startDateField.dirty || startDateField.touched)" class="invalid-feedback">
-      <div *ngIf="startDateField.errors.required">
-       Start Date is required.
-      </div>
-    </div>
-
-  </div>
-
-  <div class="form-group">
-    <label for="endDate">End Date</label>
-    <input [(ngModel)]="task.endDate" type="date" name="endDate" id="endDate" class="form-control" #endDateField [ngClass]="{'is-invalid' : endDateField.invalid && (endDateField.dirty || endDateField.touched)}" required>
-
-    <div *ngIf="endDateField.invalid && (endDateField.dirty || endDateField.touched)" class="invalid-feedback">
-      <div *ngIf="endDateField.errors.required">
-        End Date is required.
-      </div>
-    </div>
-
+    <label for="daterange">Task Date</label>
+    <input type="text" [(ngModel)]="daterangeInput" (change)="daterangeInput" class="form-control" name="daterangeInput" daterangepicker [options]="options" (selected)="selectedDate($event, daterange)" #daterangeInputField="ngModel" required>
   </div>
 
   <div class="form-group">
     <label for="details">Details</label>
     <textarea [(ngModel)]="task.details" name="details" id="details" cols="4" rows="5" class="form-control" required></textarea>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button [disabled]="!taskForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
 </form>
 <!-- [disabled]="!taskForm.form.valid" -->
