--- a/tasksapp/tasks-ui/src/app/components/tasks/tasks-list/tasks-list.component.html
+++ b/tasksapp/tasks-ui/src/app/components/tasks/tasks-list/tasks-list.component.html
@@ -20,7 +20,9 @@
       <div class="card mb-4">
         <h3 class="card-header">Today's Task</h3>
         <ul *ngIf="todaysTask.length > 0; else noTodaysTask" class="list-group list-group-flush">
-          <li *ngFor="let task of todaysTask" class="list-group-item">{{ task.name }}</li>
+          <li *ngFor="let task of todaysTask" class="list-group-item d-block">
+            <a href="#" class="d-block text-dark" routerLink="/task/view/{{ task._id }}">{{ task.name }}</a>
+          </li>
         </ul>
         <ng-template #noTodaysTask>
           <div class="card-body">
@@ -34,7 +36,9 @@
       <div class="card mb-4">
         <h3 class="card-header">Latest Task</h3>
         <ul *ngIf="latestTask.length > 0; else noLatestTask" class="list-group list-group-flush">
-          <li *ngFor="let task of latestTask" class="list-group-item">{{ task.name }}</li>
+          <li *ngFor="let task of latestTask" class="list-group-item d-block">
+            <a href="#" class="d-block text-dark" routerLink="/task/view/{{ task._id }}">{{ task.name }}</a>
+          </li>
         </ul>
         <ng-template #noLatestTask>
           <div class="card-body">
@@ -48,7 +52,9 @@
       <div class="card mb-4">
         <h3 class="card-header">Overdue Task</h3>
         <ul *ngIf="overdueTask.length > 0; else noOverDueTask" class="list-group list-group-flush">
-          <li *ngFor="let task of overdueTask" class="list-group-item">{{ task.name }}</li>
+          <li *ngFor="let task of overdueTask" class="list-group-item d-block">
+            <a href="#" class="d-block text-dark" routerLink="/task/view/{{ task._id }}">{{ task.name }}</a>
+          </li>
         </ul>
         <ng-template #noOverDueTask>
           <div class="card-body">
@@ -62,7 +68,9 @@
       <div class="card mb-4">
         <h3 class="card-header">Done Task</h3>
         <ul *ngIf="doneTask.length > 0; else noDoneTask" class="list-group list-group-flush">
-          <li *ngFor="let task of doneTask" class="list-group-item">{{ task.name }}</li>
+          <li *ngFor="let task of doneTask" class="list-group-item d-block">
+            <a href="#" class="d-block text-dark" routerLink="/task/view/{{ task._id }}">{{ task.name }}</a>
+          </li>
         </ul>
         <ng-template #noDoneTask>
           <div class="card-body">
