Added the new route

--- a/tasksapp/tasks-ui/src/app/components/navbar/navbar.component.html
+++ b/tasksapp/tasks-ui/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/" href="#">Home</a>
         </li>
         <li *ngIf="authService.loggedIn()" class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/task/all" href="#">Tasks List</a>
+          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/task/all/today" href="#">Tasks List</a>
         </li>
         <li *ngIf="authService.loggedIn()" class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/task/add" href="#">Add Task</a>
