--- a/tasksapp/tasks-ui/src/app/components/tasks/tasks-list/latest/latest.component.html
+++ b/tasksapp/tasks-ui/src/app/components/tasks/tasks-list/latest/latest.component.html
@@ -1,3 +1,13 @@
-<p>
-  latest works!
-</p>
+<div class="card mb-4">
+  <h3 class="card-header">Latest Task</h3>
+  <ul *ngIf="tasks.length > 0; else noLatestTask" class="list-group list-group-flush">
+    <li *ngFor="let task of tasks" class="list-group-item d-block">
+      <a href="#" class="d-block text-dark" routerLink="/task/view/{{ task._id }}">{{ task.name }}</a>
+    </li>
+  </ul>
+  <ng-template #noLatestTask>
+    <div class="card-body">
+      <p class="font-weight-bold text-center">{{ errorMsg || 'No Latest Task as of now.' }}</p>
+    </div>
+  </ng-template>
+</div>
