--- a/tasksapp/tasks-ui/src/app/components/tasks/tasks-list/overdue/overdue.component.html
+++ b/tasksapp/tasks-ui/src/app/components/tasks/tasks-list/overdue/overdue.component.html
@@ -1,3 +1,13 @@
-<p>
-  overdue works!
-</p>
+<div class="card mb-4">
+  <h3 class="card-header">Overdue Task</h3>
+  <ul *ngIf="tasks.length > 0; else noTodaysTask" class="list-group list-group-flush">
+    <li *ngFor="let task of tasks" class="list-group-item d-block">
+      <a href="#" class="d-block text-dark" routerLink="/task/view/{{ task._id }}">{{ task.name }}</a>
+    </li>
+  </ul>
+  <ng-template #noTodaysTask>
+    <div class="card-body">
+      <p class="font-weight-bold text-center">{{ errorMsg || 'Good Job! No Overdue Task.' }}</p>
+    </div>
+  </ng-template>
+</div>
